--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@ color: white;
  .cabecalho.imagem {
     width: 20%;
  }
-
+.cabecalho {
+   background-color: #383D58;
+   color: white;
+   display: flex;
+}
  
  
   
