--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ color: white;
    display: inline-block;
   margin: 0 16px;
   padding: 0 24px;
+  justify-content: space-around;
+  font-size: 24px;
 }
  
   
