--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ color: white;
 }
 .escola-imagem{
     width: 25%;
-    background-image: linear-gradient(#383D58, #00c0eb);
+}
+.escola{
+    background-image: linear-gradient(#383D58,#00c0eb);
     color: white;
     display: flex;
 }
